// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor.Absolute /> should match snapshot 1`] = `
<div>
  <a
    class="css-158cs26-AbsoluteAnchorWithRef"
    href="https://example.com"
    referrerpolicy="no-referrer"
    target=""
  >
    <i
      class="material-icons-outlined css-1s21fbt-AbsoluteAnchorWithRef"
    >
      open_in_new
    </i>
    link
  </a>
</div>
`;

exports[`<Anchor.Absolute /> should render with no decoration 1`] = `
<div>
  <a
    class="css-18kxuu6-AbsoluteAnchorWithRef"
    href="https://example.com"
    referrerpolicy="no-referrer"
    target=""
  >
    <i
      class="material-icons-outlined css-1s21fbt-AbsoluteAnchorWithRef"
    >
      open_in_new
    </i>
    link
  </a>
</div>
`;
